OPHYK-285 remove old viestintapalvelu/ryhmasahkoposti integration and send all emails through the same email service