@@ -1,24 +1,20 @@
 package fi.vm.sade.organisaatio.business.impl;
 
-import fi.vm.sade.organisaatio.PrintingAnswer;
-import fi.vm.sade.organisaatio.business.OrganisaatioViestinta;
 import fi.vm.sade.organisaatio.client.KayttooikeusClient;
 import fi.vm.sade.organisaatio.dto.VirkailijaDto;
+import fi.vm.sade.organisaatio.email.EmailService;
+import fi.vm.sade.organisaatio.email.QueuedEmail;
 import fi.vm.sade.organisaatio.model.Organisaatio;
 import fi.vm.sade.organisaatio.repository.OrganisaatioRepository;
-import fi.vm.sade.organisaatio.repository.OrganisaatioSahkopostiRepository;
 import fi.vm.sade.properties.OphProperties;
-import fi.vm.sade.organisaatio.model.email.EmailData;
-import fi.vm.sade.organisaatio.model.email.EmailRecipient;
 import freemarker.template.Configuration;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.invocation.InvocationOnMock;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.support.ReloadableResourceBundleMessageSource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.ui.freemarker.FreeMarkerConfigurationFactoryBean;
 
 import java.util.Collection;
@@ -26,13 +22,11 @@ import java.util.List;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.tuple;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(SpringExtension.class)
+@SpringBootTest
 public class VanhentuneetTiedotSahkopostiServiceImplTest {
 
     private VanhentuneetTiedotSahkopostiServiceImpl service;
@@ -40,11 +34,9 @@ public class VanhentuneetTiedotSahkopostiServiceImplTest {
     @Mock
     private KayttooikeusClient kayttooikeusClientMock;
     @Mock
-    private OrganisaatioViestinta organisaatioViestintaMock;
-    @Mock
     private OrganisaatioRepository organisaatioRepositoryMock;
     @Mock
-    private OrganisaatioSahkopostiRepository organisaatioSahkopostiRepositoryMock;
+    private EmailService emailServiceMock;
 
     private OphProperties properties = new OphProperties("/organisaatio-service-oph.properties");
 
@@ -60,9 +52,8 @@ public class VanhentuneetTiedotSahkopostiServiceImplTest {
         freeMarkerConfigurationFactoryBean.afterPropertiesSet();
         Configuration freemarker = freeMarkerConfigurationFactoryBean.getObject();
 
-        service = new VanhentuneetTiedotSahkopostiServiceImpl(kayttooikeusClientMock, organisaatioViestintaMock,
-                organisaatioRepositoryMock, organisaatioSahkopostiRepositoryMock, messageSource, freemarker, properties);
-        when(organisaatioViestintaMock.sendEmail(any(), anyBoolean())).then(new PrintingAnswer<>());
+        service = new VanhentuneetTiedotSahkopostiServiceImpl(kayttooikeusClientMock, emailServiceMock,
+                organisaatioRepositoryMock, messageSource, freemarker, properties);
     }
 
     @Test
@@ -73,7 +64,7 @@ public class VanhentuneetTiedotSahkopostiServiceImplTest {
                     Organisaatio organisaatio = new Organisaatio();
                     organisaatio.setOid((String) oid);
                     return organisaatio;
-                }).collect(toList()));
+                }).toList());
         VirkailijaDto virkailija1 = new VirkailijaDto();
         virkailija1.setSahkoposti("example1@example.com");
         VirkailijaDto virkailija2 = new VirkailijaDto();
@@ -93,14 +84,20 @@ public class VanhentuneetTiedotSahkopostiServiceImplTest {
         service.lahetaSahkopostit();
 
         verify(organisaatioRepositoryMock).findByTarkastusPvm(any(), any(), eq(singletonList("org1")), anyLong());
-        ArgumentCaptor<EmailData> emailDataArgumentCaptor = ArgumentCaptor.forClass(EmailData.class);
-        verify(organisaatioViestintaMock, times(2)).sendEmail(emailDataArgumentCaptor.capture(), eq(false));
-        List<EmailData> emailDatas = emailDataArgumentCaptor.getAllValues();
-        assertThat(emailDatas).extracting(emailData -> emailData.getEmail().getLanguageCode(),
-                emailData -> emailData.getRecipient().stream().map(EmailRecipient::getEmail).sorted().collect(toList()))
+        ArgumentCaptor<QueuedEmail> emailDataArgumentCaptor = ArgumentCaptor.forClass(QueuedEmail.class);
+        verify(emailServiceMock, times(2)).queueEmail(emailDataArgumentCaptor.capture());
+        List<QueuedEmail> emailDatas = emailDataArgumentCaptor.getAllValues();
+        assertThat(emailDatas).extracting(emailData -> emailData.getRecipients())
                 .containsExactlyInAnyOrder(
-                        tuple("fi", asList("example1@example.com", "example2@example.com", "example4@example.com")),
-                        tuple("sv", singletonList("example3@example.com")));
+                        asList("example1@example.com", "example2@example.com", "example4@example.com"),
+                        singletonList("example3@example.com"));
+
+        String svBody = emailDatas.stream()
+                .filter(e -> e.getRecipients().get(0).equals("example3@example.com"))
+                .findFirst()
+                .orElseThrow()
+                .getBody();
+        assertThat(svBody).contains("Granskning av uppgifter");
     }
 
 }
